  [#4101]  setjmp/longjmp destroy changes in global registers.
  [#11479] Add missing pin definitions for iotn16.h.
  [#11486] Put the port bit defintions back in for mega16.
  [#11505] Remove doxygen comment about the deprecated inp/outp items.
  [#11510] Abstract the change enable bit in wdt.h for mega32.
  [#11522] Rewrite wdt_disable() to match datasheet algorithm.
  
*** Changes in avr-libc-1.2.0:

* Bugs fixed:

  [no-id] Fix TICIE1 value in usb header files.
  [no-id] Fix bug introduced in fix for bug #7802 (missing parens).
  [no-id] Move ATtiny2313 and ATtiny13 from avr4 to avr2 (by now).
  [#2143] malloc() routines chunk smaller than requested
  [#5454] Inline functions results in undefined reference when optimize level 0
          is used.
  [#5799] error(?) in iom162.h
  [#2233] Documentation issues with inline asm
  [#6352] Sleep mode for ATmega162, ATmega161, and ATmega8515 
  [#7469] "Problem" by using the library function "boot_lock_bits_set"
  [#7556] printf and friends improperly handle non-null terminated strings when
          a %s argument has a precision.
  [#7802] vfscanf problem with unsigned long (patch #2554)
  [#7989] dtostrf() destroys string pointer registers?
  [#8119] _wdt_write macro in wdt.h doesn't work with ATmega169
  [#8391] Fuse mask in boot.h wrong?
          NOTE: boot_lock_bits_set() was broken. Please see the new
          documentation for examples of how the new version works.
  [#8452] some SFR and bit names in iom169.h are incorrect
          NOTE: Where possible, the old names are retained to avoid breaking
          existing code, but the OCR1A and OCR1B names where just plain wrong
          so they have been changed and the incorrect names (OCRA1 and OCRB1)
          are undefined.
  [#8649] sfr_defs.h: missed _SFR_BYTE() in bit_is_set/clear
  [#9345] Zero-Padding on vfprintf
  [#10150] Update release versions compatible with avr-libc and instructions.
  [#10489] Sleep mode for atmega48/88/168 family 