@@ -27,6 +27,7 @@ Juergen Schilling
 Philip Soeberg
 Nils Kristian Strom
 Michael Stumpf
+Helmut Wallner
 Eric B. Weddington
 Joerg Wunsch
 University of California
